--- a/projectsystem/facturacion/templates/login/nuevperf_form.html
+++ b/projectsystem/facturacion/templates/login/nuevperf_form.html
@@ -9,26 +9,26 @@
     <link rel="stylesheet" href="{% static 'css/estilos-form.css' %}">
     <style>
         body {
-            background-color: #f8f9fa; /* Color de fondo suave */
+            background-color: #f8f9fa;
         }
         .form-container {
-            background-color: #ffffff; /* Fondo blanco para el cuadro */
-            padding: 30px; /* Espaciado interno */
-            border-radius: 8px; /* Esquinas redondeadas */
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); /* Sombra sutil */
-            max-width: 500px; /* Ancho máximo del cuadro */
-            margin: auto; /* Centra el cuadro horizontalmente */
+            background-color: #ffffff; 
+            padding: 30px; 
+            border-radius: 8px; 
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); 
+            max-width: 500px;
+            margin: auto; 
         }
         .form-control {
-            background-color: #007bff; /* Color de fondo azul para los inputs */
-            color: #ffffff; /* Color del texto en los inputs */
+            background-color: #007bff; 
+            color: #ffffff; 
         }
         .form-control::placeholder {
-            color: #e0e0e0; /* Color de texto del placeholder */
+            color: #e0e0e0; 
         }
         .btn-primary {
-            background-color: #0056b3; /* Color de fondo del botón */
-            border-color: #0056b3; /* Color del borde del botón */
+            background-color: #0056b3; 
+            border-color: #0056b3; 
         }
     </style>
 </head>
