Verificacion User-Diseño

--- a/projectsystem/facturacion/templates/login/login_form.html
+++ b/projectsystem/facturacion/templates/login/login_form.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="{% static 'css/estilos-form.css' %}">
+    <link rel="stylesheet" href="{% static 'css/estilos-formulario.css' %}">
 
 </head>
 <body>
@@ -23,7 +23,7 @@
         {% endif %}
 
         <h1>TuFactura Medellín</h1>
-        <img class="logo" src="{% static 'img/logomedellin.png' %}"><br>
+        <img class="logo" src="{% static 'img/logoepm.png' %}"><br>
 
 
         <form action="#" method="post">
