--- a/projectsystem/facturacion/static/css/estilos-formulario.css
+++ b/projectsystem/facturacion/static/css/estilos-formulario.css
@@ -1,5 +1,5 @@
 body {
-    background: linear-gradient(135deg, #403cfd 0%, #ea95ff 100%);
+    background: linear-gradient(135deg, #024800 0%, #c1ff07 100%);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -27,8 +27,8 @@ h1 {
 
 .logo {
     width: 100%; 
-    height: 150px; /* Ajusta la altura según sea necesario */
-    object-fit: cover; /* Cubre el área sin distorsionar la imagen */
+    height: 150px; 
+    object-fit: cover; 
 }
 
 .form-control {
@@ -40,7 +40,7 @@ h1 {
 }
 
 .btn-info {
-    background-color: #332bcb;
+    background-color: #0cb214;
     color: whitesmoke;
     border: none;
     padding: 10px 20px;
@@ -51,7 +51,7 @@ h1 {
 }
 
 .btn-info:hover {
-    background-color: #332bcb;
+    background-color: #0cb214;
 }
 
 .alert {
