--- a/projectsystem/facturacion/templates/login/nuevperf_form.html
+++ b/projectsystem/facturacion/templates/login/nuevperf_form.html
@@ -6,81 +6,67 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Crear Nuevo Perfil</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="{% static 'css/estilos-form.css' %}">
-    <style>
-        body {
-            background-color: #f8f9fa;
-        }
-        .form-container {
-            background-color: #ffffff; 
-            padding: 30px; 
-            border-radius: 8px; 
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); 
-            max-width: 500px;
-            margin: auto; 
-        }
-        .form-control {
-            background-color: #007bff; 
-            color: #ffffff; 
-        }
-        .form-control::placeholder {
-            color: #e0e0e0; 
-        }
-        .btn-primary {
-            background-color: #0056b3; 
-            border-color: #0056b3; 
-        }
-    </style>
+    <link rel="stylesheet" href="{% static 'css/estilos-nuevperf.css' %}">    
+
 </head>
 <body>
-    <div class="form-container mt-5">
-        <h2 class="mb-4 text-center">Crear Nuevo Perfil</h2>
+    <div class="container-fluid">
+        <div class="row vh-100">
+            <div class="col-md-6 d-flex align-items-center justify-content-center">
+                <div class="form-container">
+                    <h2 class="mb-4 text-center">Crear Nuevo Perfil</h2>
 
-        <!-- Mostrar las notificaciones -->
-        {% if messages %}
-        <div class="alert alert-info" role="alert">
-            <ul class="messages">
-                {% for message in messages %}
-                    <li {% if message.tags %} class="{{ message.tags }}" {% endif %}>{{ message }}</li>
-                {% endfor %}
-            </ul>
+                    <!-- Mostrar las notificaciones -->
+                    {% if messages %}
+                    <div class="alert alert-info" role="alert">
+                        <ul class="messages">
+                            {% for message in messages %}
+                                <li {% if message.tags %} class="{{ message.tags }}" {% endif %}>{{ message }}</li>
+                            {% endfor %}
+                        </ul>
+                    </div>
+                    {% endif %}
+
+                    <form action="{% url 'agregar_perfil' %}" method="post">
+                        {% csrf_token %}
+
+                        <div class="mb-3">
+                            <label for="correo" class="form-label">Correo</label>
+                            <input type="email" id="correo" class="form-control" required name="correo" placeholder="ejemplo@correo.com" />
+                        </div>
+
+                        <div class="mb-3">
+                            <label for="nombre" class="form-label">Nombre</label>
+                            <input type="text" id="nombre" class="form-control" required name="nombre" placeholder="Ingresa tu nombre" />
+                        </div>
+
+                        <div class="mb-3">
+                            <label for="apellido" class="form-label">Apellido</label>
+                            <input type="text" id="apellido" class="form-control" required name="apellido" placeholder="Ingresa tu apellido" />
+                        </div>
+
+                        <div class="mb-3">
+                            <label for="clave" class="form-label">Clave</label>
+                            <input type="password" id="clave" class="form-control" required name="clave" placeholder="Ingresa tu contraseña" />
+                        </div>
+
+                        <div class="mb-3">
+                            <label for="rol" class="form-label">Rol</label>
+                            <select id="rol" name="rol" class="form-select">
+                                <option value="U">Usuario</option>
+                                <!-- Agrega más opciones aquí si es necesario -->
+                            </select>
+                        </div>
+
+                        <button type="submit" class="btn btn-primary w-100">Guardar</button>
+                    </form>
+                </div>
+            </div>
+
+            <div class="col-md-6 image-container">
+                <img class="logo" src="{% static 'img/fondomedellin.jpg' %}"><br>
+            </div>
         </div>
-        {% endif %}
-
-        <form action="{% url 'agregar_perfil' %}" method="post">
-            {% csrf_token %}
-
-            <div class="mb-3">
-                <label for="correo" class="form-label">Correo</label>
-                <input type="email" id="correo" class="form-control" required name="correo" placeholder="ejemplo@correo.com" />
-            </div>
-
-            <div class="mb-3">
-                <label for="nombre" class="form-label">Nombre</label>
-                <input type="text" id="nombre" class="form-control" required name="nombre" placeholder="Ingresa tu nombre" />
-            </div>
-
-            <div class="mb-3">
-                <label for="apellido" class="form-label">Apellido</label>
-                <input type="text" id="apellido" class="form-control" required name="apellido" placeholder="Ingresa tu apellido" />
-            </div>
-
-            <div class="mb-3">
-                <label for="clave" class="form-label">Clave</label>
-                <input type="password" id="clave" class="form-control" required name="clave" placeholder="Ingresa tu contraseña" />
-            </div>
-
-            <div class="mb-3">
-                <label for="rol" class="form-label">Rol</label>
-                <select id="rol" name="rol" class="form-select">
-                    <option value="U">Usuario</option>
-                    <option value="A">Administrador</option>
-                    <!-- Agrega más opciones aquí si es necesario -->
-                </select>
-            </div>
-
-            <button type="submit" class="btn btn-primary w-100">Guardar</button>
-        </form>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
