--- a/projectsystem/facturacion/templates/login/login_form.html
+++ b/projectsystem/facturacion/templates/login/login_form.html
@@ -38,6 +38,7 @@
             
             <p class="text-center mt-3">
                 <a href="{% url 'agregar_perfil' %}" class="link-info">¿No tienes perfil?</a>
+                <a href="#" class="link-info">Admin</a>
             </p>
 
         </form>
