--- a/projectsystem/facturacion/templates/index.html
+++ b/projectsystem/facturacion/templates/index.html
@@ -4,45 +4,42 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TuFactura Medellín </title>
+    <title>TuFactura Medellín</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link href="{% static 'css/estilos.css' %}" rel="stylesheet" />
 </head>
 <body>
     <nav class="navbar bg-dark border-bottom border-body" data-bs-theme="dark">
         <div class="container-fluid">
-        <a class="navbar-brand" href="#">TuFactura Medellín</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <ul class="d-flex navbar-nav">
-            <li class="nav-item">
-                <a class="nav-link">Bienvenido(a): <strong>{{ request.session.logueado.nombre }} {{ request.session.logueado.apellido }}-ID[{{ request.session.logueado.id }}]</strong></a>
-            </li>
-            <li class="nav-item">
-                <a href="{% url 'logout' %}"><button class="btn btn-info">Cerrar Sesión</button></a>
-            </li>
-        </ul>
-        <div class="collapse navbar-collapse" id="navbarText">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Features</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Pricing</a>
-            </li>
+            <a class="navbar-brand" href="#">TuFactura Medellín</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <ul class="d-flex navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link">Bienvenido(a): <strong>{{ request.session.logueado.nombre }} {{ request.session.logueado.apellido }} - ID[{{ request.session.logueado.id }}]</strong></a>
+                </li>
+                <li class="nav-item">
+                    <a href="{% url 'logout' %}"><button class="btn btn-info">Cerrar Sesión</button></a>
+                </li>
             </ul>
-            <span class="navbar-text">
-            </span>
-        </div>
+            <div class="collapse navbar-collapse" id="navbarText">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="#">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Features</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Pricing</a>
+                    </li>
+                </ul>
+                <span class="navbar-text"></span>
+            </div>
         </div>
     </nav>
 
-
-    <img class="logo" src="{% static 'img/logomedellin.png' %}"><br>
     {% if messages %}
     {% for message in messages %}
         <div class="alert alert-{% if message.tags == 'error' %}danger{% else %}{{ message.tags }}{% endif %}" role="alert">
@@ -51,6 +48,36 @@
     {% endfor %}
     {% endif %}
 
+    <!-- Cards Section -->
+    <div class="container mt-5">
+        <div class="row">
+            <div class="col-md-6">
+                <div class="card">
+                    <img src="{% static 'img/logoepm.png' %}" class="card-img-top" alt="Imagen 1">
+                    <div class="card-body">
+                        <h5 class="card-title">Título de la Card 1</h5>
+                        <p class="card-text">Descripción breve de la card 1. Puedes poner información relevante aquí.</p>
+                        <a href="#" class="btn btn-primary">Ver más</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6">
+                <div class="card">
+                    <img src="{% static 'img/logoepm.png' %}" class="card-img-top" alt="Imagen 2">
+                    <div class="card-body">
+                        <h5 class="card-title">Título de la Card 2</h5>
+                        <p class="card-text">Descripción breve de la card 2. Aquí también puedes agregar información.</p>
+                        <a href="#" class="btn btn-primary">Ver más</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Footer Section -->
+    <footer class="bg-dark text-white mt-5 p-4 text-center">
+        &copy; 2024 TuFactura Medellín. Todos los derechos reservados.
+    </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="{% static 'js/funciones.js' %}"></script>
