--- a/projectsystem/facturacion/templates/index.html
+++ b/projectsystem/facturacion/templates/index.html
@@ -57,7 +57,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Título de la Card 1</h5>
                         <p class="card-text">Descripción breve de la card 1. Puedes poner información relevante aquí.</p>
-                        <a href="#" class="btn btn-primary">Ver más</a>
+                        <a href="{% url 'nuevo_contrato' %}" class="btn btn-primary">Nuevo Contrato</a>
                     </div>
                 </div>
             </div>
